# go2_ros2_sdk

./: .gitignore
go2_robot_sdk/: .pylintrc  pyproject.toml  pyrightconfig.json
go2_robot_sdk/go2_robot_sdk/: __init__.py  main.py
go2_robot_sdk/go2_robot_sdk/application/: __init__.py
go2_robot_sdk/go2_robot_sdk/application/services/: robot_control_service.py  robot_data_service.py
go2_robot_sdk/go2_robot_sdk/application/utils/: __init__.py  command_generator.py
go2_robot_sdk/go2_robot_sdk/domain/constants/: __init__.py  webrtc_topics.py
go2_robot_sdk/go2_robot_sdk/domain/entities/: __init__.py  robot_data.py
go2_robot_sdk/go2_robot_sdk/domain/interfaces/: __init__.py  robot_controller.py  robot_data_publisher.py  robot_data_receiver.py
go2_robot_sdk/go2_robot_sdk/domain/math/: __init__.py  geometry.py  kinematics.py
go2_robot_sdk/go2_robot_sdk/infrastructure/: __init__.py
go2_robot_sdk/go2_robot_sdk/infrastructure/ros2/: __init__.py  ros2_publisher.py
go2_robot_sdk/go2_robot_sdk/infrastructure/sensors/: __init__.py  camera_config.py  lidar_decoder.py  lidar_decoder_result.py
go2_robot_sdk/go2_robot_sdk/infrastructure/webrtc/: __init__.py  data_decoder.py  go2_connection.py  go2_message_parsers.py  http_client.py  webrtc_adapter.py
go2_robot_sdk/go2_robot_sdk/infrastructure/webrtc/crypto/: encryption.py
go2_robot_sdk/go2_robot_sdk/presentation/: __init__.py  go2_driver_node.py
go2_robot_sdk/go2_robot_sdk/webrtc_relay/: mock_go2_video_track.py  mock_go2_webrtc_server.py  raw_commands.md  voxel_map_viewer.py  webrtc_relay.py  webrtc_relay_app_state.py  webrtc_relay_client.py  webrtc_relay_client_video_viewer.py  webrtc_relay_endpoint_go2.py  webrtc_relay_endpoint_webrtc.py  webrtc_relay_exceptions.py
